// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`d-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/./d;

=====================================output=====================================
/./d;

================================================================================
`;

exports[`multiple-flags.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/.*/ms;
/.*/my;

=====================================output=====================================
/.*/ms;
/.*/my;

================================================================================
`;

exports[`regexp-modifiers.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/(?ims:^[a-z])/u;
/(?-ims:^[a-z].)(^[a-z].)/uims;
/(?ims:^[a-z].1$)/;

=====================================output=====================================
/(?ims:^[a-z])/u;
/(?-ims:^[a-z].)(^[a-z].)/imsu;
/(?ims:^[a-z].1$)/;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/[/]\\/\\u0aBc/mgi;

=====================================output=====================================
/[/]\\/\\u0aBc/gim;

================================================================================
`;

exports[`v-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/a/v;

=====================================output=====================================
/a/v;

================================================================================
`;
